# smorgasbord

./: .gitignore  Cargo.toml  LICENSE  README.md  error.txt
src/: app.rs  grid.rs  main.rs  nt.rs  nt_backend.rs  nt_worker.rs  table.rs  trie.rs  widget.rs  widget_manager.rs  widget_tree.rs
src/backend/: backend.rs  mock.rs  mod.rs  nt.rs  nt_worker.rs
src/state/: app.rs  grid.rs  mod.rs  pack.rs  packing.rs  widget.rs  widget_manager.rs
src/view/: app.rs  mod.rs  packing.rs  table.rs  widget.rs
src/widgets/: mod.rs  sendable_chooser.rs  simple.rs  tabs.rs  util.rs  widget.rs
