[package]
name = "smorgasbord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
network-tables = { version = "0.1.3", features = ["client-v4"] }
ratatui = "0.24.0"
thiserror = "1.0.50"
tokio = { version = "1.23.0", features = ["rt", "sync", "net", "time", "macros", "rt-multi-thread", "parking_lot"] }
