[package]
name = "smorgasbord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
fastrand = "2.0.1"
network-tables = { version = "0.1.3", features = ["client-v4"] }
once_cell = "1.18.0"
ratatui = "0.24.0"
smartstring = "1.0.1"
smol_str = "0.2.0"
thiserror = "1.0.50"
tokio = { version = "1.23.0", features = ["rt", "sync", "net", "time", "macros", "rt-multi-thread", "parking_lot"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tui-input = "0.8.0"
